@@ -3,4 +3,8 @@ if {![package vsatisfies [package provide Tcl] 8.4]} {
     return
 }
 package ifneeded Plotchart 1.8.3 [list source [file join $dir plotchart.tcl]]
-package ifneeded xyplot    1.0.1 [list source [file join $dir xyplot.tcl]]
+if {![package vsatisfies [package provide Tcl] 8.5]} {
+    # PRAGMA: returnok
+    return
+}
+package ifneeded xyplot 1.0.1 [list source [file join $dir xyplot.tcl]]
